# MidnightServer

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 01_initial.sql
proto/midnight/: midnight_services.proto
src/: config.rs  logging.rs  main.rs  state.rs
src/core/: config.rs  db.rs  error.rs  health.rs  logging.rs  mod.rs  state.rs
src/grpc/: health.rs
src/proto/: mod.rs
tests/core/: config.rs  error.rs  health.rs  logging.rs  state.rs
tests/grpc/: health.rs
