[package]
name = "MidnightServer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-reflection = "0.14"
tonic-web = "0.14"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
